--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <header>
         <h1>Jiangctry</h1>
-        <p>试一试</p>
+        <p>记录点滴 收藏感悟</p>
 
 
         <p class="view"><a href="https://github.com/jiangctry">View My GitHub Profile</a></p>
